--- a/CommandLib/CommandLib.vcxproj
+++ b/CommandLib/CommandLib.vcxproj
@@ -177,19 +177,31 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ChatData.h" />
+    <ClInclude Include="CmdProcess.h" />
+    <ClInclude Include="CriticalSection.h" />
     <ClInclude Include="export.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ISyncObject.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="SingleLock.h" />
+    <ClInclude Include="SyncObject.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ChatData.cpp" />
+    <ClCompile Include="CmdProcess.cpp" />
     <ClCompile Include="CommandLib.cpp" />
+    <ClCompile Include="CriticalSection.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="ISyncObject.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SingleLock.cpp" />
+    <ClCompile Include="SyncObject.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
